[package]
name = "any-error"
description = "When you just want to use `?` in peace"
version = "0.1.0"
authors = ["Pierre Avital <pierre.avital+gitlab@gmail.com>"]
edition = "2018"
license = "MPL-2.0"
keywords = ["error-handling", "any"]
readme = "README.md"
repository = "https://github.com/p-avital/any-error"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
